# hoa_property

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: exception_handling.md  frameworks.md  python.md
scripts/: generate_tree.ps1
src/extract/: handler.py  pdf.py
src/hoa_property/: __init__.py
tests/: test_config.py  test_pdf.py
